[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratelimiter-keshav"
version = "0.1.0"
description = "A pluggable rate limiting library for Python web frameworks"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "redis>=4.0"
]

authors = [
    {name = "Keshav Sharma"}
]

[project.optional-dependencies]

flask = [
    "flask>=2.0"
]

fastapi = [
    "fastapi>=0.95",
    "starlette"
]

dev = [
    "pytest",
    "pytest-cov",
    "httpx"
]

[tool.hatch.build.targets.wheel]
packages = ["rate_limiter"]